--- a/src/Components/Sections/Home/style.module.css
+++ b/src/Components/Sections/Home/style.module.css
@@ -13,3 +13,27 @@
     85%  { right:-6rem; bottom:20rem;}
     100% { right:-6rem; bottom:-4rem;}
   }
+
+  .shine{
+    animation-name: thunder;
+    animation-duration: 10s;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  @keyframes thunder{
+    0%   { filter: brightness(1);}
+    10%   { filter: brightness(1.3);}
+    15%  { filter: brightness(1);}
+    35%  { filter: brightness(2);}
+    40%  { filter: brightness(1.3);}
+    55%  { filter: brightness(1);}
+    65%  { filter: brightness(1.3);}
+    75%  { filter: brightness(1);}
+    85%  { filter: brightness(1.3);}
+    95%  { filter: brightness(1);}
+    96%  { filter: brightness(2);}
+    98%   { filter: brightness(1.3);}
+    99%   { filter: brightness(2.5);}
+    100% { filter: brightness(1.3);}
+  }
