--- a/src/Components/Sections/Home/style.module.css
+++ b/src/Components/Sections/Home/style.module.css
@@ -1,16 +1,16 @@
 .teste{
 
     animation-name: luz;
-    animation-duration: 20s;
-    animation-delay: 4s;
-    animation-iteration-count: 3;
+    animation-duration: 50s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
 }
 @keyframes luz {
     0%   { right:-6rem; bottom:-4rem;width: 30rem; height: 30rem;}
     25%  { right:20rem; bottom:-4rem;width: 20rem; height: 20rem;}
     60%  { right:20rem; bottom:20rem;width: 10rem; height: 10rem;}
-    85%  { right:-6rem; bottom:20rem;}
+    75%  { right:-6rem; bottom:20rem;}
     100% { right:-6rem; bottom:-4rem;}
   }
 
@@ -23,17 +23,17 @@
   }
   @keyframes thunder{
     0%   { filter: brightness(1);}
-    10%   { filter: brightness(1.3);}
+    10%   { filter: brightness(1.6);}
     15%  { filter: brightness(1);}
     35%  { filter: brightness(2);}
-    40%  { filter: brightness(1.3);}
+    40%  { filter: brightness(1.6);}
     55%  { filter: brightness(1);}
-    65%  { filter: brightness(1.3);}
+    65%  { filter: brightness(1.6);}
     75%  { filter: brightness(1);}
-    85%  { filter: brightness(1.3);}
+    85%  { filter: brightness(1.6);}
     95%  { filter: brightness(1);}
-    96%  { filter: brightness(2);}
-    98%   { filter: brightness(1.3);}
-    99%   { filter: brightness(2.5);}
-    100% { filter: brightness(1.3);}
+    96%  { filter: brightness(3);}
+    98%   { filter: brightness(1.6);}
+    99%   { filter: brightness(3);}
+    100% { filter: brightness(1.4);}
   }
